# cams_4_niels

./: Makefile  README.md  cams_4_niels.ini  dash_app.service  pyproject.toml  quart_app.service
src/: app.py  app_sample.py  config.py  wsgi.py
src/components/: __init__.py  button.py  date_picker.py  dropdown.py  ids.py  nav_bar.py  radioitems.py  slider.py
src/layouts/: __init__.py  equipment_layout.py  helium_layout.py  home_layout.py  main_layout.py  platform_layout.py  rooms_layout.py  zone_layout.py
src/pages/: __init__.py  equipment_page.py  helium_page.py  home_page.py  platform_page.py  rooms_page.py  zone_page.py
src/utils/: __init__.py  plotly_utils.py
tests/: app copy.py  app copy3.py  app.py  app2.py  cam.py  cam_v2.py  home_layout copy.py  home_layout copy3.py
